[fix] card-content css with spacing issue

--- a/public/assets/scss/custom/custom.scss
+++ b/public/assets/scss/custom/custom.scss
@@ -335,7 +335,6 @@ slick-slider .slick-list,
   display: none;
 }
 
-
 .underline {
   text-decoration: underline;
 }
@@ -344,6 +343,17 @@ slick-slider .slick-list,
   text-align: center;
 }
 
-.custom-card{
+.custom-card {
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background: #fff;
+  transition: all 0.5s ease;
+  user-select: none;
+  z-index: 10;
+  overflow: hidden;
+}
 
+.custom-card:hover {
+  color: #fff;
+  transform: scale(1.025);
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 5px 10px;
 }
